Make pending_interrupt?(Exception) work

A patch from katsu (Katsuhiro Ueno)

[Bug #19110]